; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_core_cmd_tsr2cmd.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_core_cmd_tsr2cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"Error while parsing command: `%s`\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @core_cmd_tsr2cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @core_cmd_tsr2cmd(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %11 = call i32* (...) @ts_parser_new()
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 (...) @tree_sitter_r2cmd()
  %14 = call i32 @ts_parser_set_language(i32* %12, i32 %13)
  %15 = load i32*, i32** %7, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @strlen(i8* %17)
  %19 = call i32* @ts_parser_parse_string(i32* %15, i32* null, i8* %16, i32 %18)
  store i32* %19, i32** %8, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @ts_tree_root_node(i32* %20)
  store i32 %21, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i64 @is_ts_commands(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %35

25:                                               ; preds = %3
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @ts_node_has_error(i32 %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %35, label %29

29:                                               ; preds = %25
  %30 = load i32*, i32** %4, align 8
  %31 = load i8*, i8** %5, align 8
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @handle_ts_commands(i32* %30, i8* %31, i32 %32, i32 %33)
  store i32 %34, i32* %10, align 4
  br label %38

35:                                               ; preds = %25, %3
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @eprintf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %36)
  br label %38

38:                                               ; preds = %35, %29
  %39 = load i32*, i32** %8, align 8
  %40 = call i32 @ts_tree_delete(i32* %39)
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @ts_parser_delete(i32* %41)
  %43 = load i32, i32* %10, align 4
  ret i32 %43
}

declare dso_local i32* @ts_parser_new(...) #1

declare dso_local i32 @ts_parser_set_language(i32*, i32) #1

declare dso_local i32 @tree_sitter_r2cmd(...) #1

declare dso_local i32* @ts_parser_parse_string(i32*, i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @ts_tree_root_node(i32*) #1

declare dso_local i64 @is_ts_commands(i32) #1

declare dso_local i32 @ts_node_has_error(i32) #1

declare dso_local i32 @handle_ts_commands(i32*, i8*, i32, i32) #1

declare dso_local i32 @eprintf(i8*, i8*) #1

declare dso_local i32 @ts_tree_delete(i32*) #1

declare dso_local i32 @ts_parser_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
